--- a/src/css/main.css
+++ b/src/css/main.css
@@ -154,21 +154,29 @@
    flex-direction: column;
 }
 
-.content__item--label > .content__wrap {
+.content__item--label .label__name {
    margin-top: 8px;
+   margin-left: 10px;
 }
 
-.content__item--label > .content__wrap > .content__link {
+.label__links {
+   margin-top: 28px;
+}
+
+.label__links .content__link {
+   margin-left: 10px;
+}
+
+.label__links .content__link + .content__link {
    margin-top: 12px;
 }
 
-.content__item--song > .content__wrap {
-   margin-top: 20px;
+.content__item--song > .content__wrap + .content__wrap {
+   margin-top: 16px;
 }
 
 .label__name {
    font-size: 32px;
    font-weight: 700;
    color: #1d4ed8;
-   margin-bottom: 16px;
 }
