--- a/src/css/media.css
+++ b/src/css/media.css
@@ -16,3 +16,53 @@
       margin-top: 35px;
    }
 }
+
+@media (max-width: 550px) {
+   .content__item--label > .content__wrap {
+      flex-direction: row;
+   }
+
+   .content__item + .content__item {
+      margin-top: 30px;
+   }
+
+   .label__name {
+      font-size: 16px;
+   }
+
+   .content__item--label .label__name {
+      margin-top: 0;
+      margin-left: 10px;
+   }
+
+   .label__links {
+      margin-top: 20px;
+   }
+
+   .cassette {
+      width: 400px;
+   }
+
+   .cassette__glass {
+      width: 372px;
+      top: 11px;
+      left: 14px;
+   }
+
+   .cassette__disc {
+      width: 25px;
+      top: 66px;
+   }
+
+   .cassette__disc--left {
+      left: 144px;
+   }
+
+   .cassette__disc--right {
+      right: 144px;
+   }
+
+   .cassette__controls {
+      top: 183px;
+   }
+}
