--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
-.wrapper {
+.container {
    display: flex;
+   padding: 0 20px;
 }
 
 /* cassette */
@@ -131,6 +132,7 @@
 
 .content__value {
    margin-left: 10px;
+   line-height: 28px;
 }
 
 .content__name {
@@ -173,6 +175,15 @@
 
 .content__item--song > .content__wrap + .content__wrap {
    margin-top: 16px;
+}
+
+.content__item--song .content__value {
+   max-width: 300px;
+}
+
+.content__item--song .content__name,
+.content__item--dev .content__name {
+   padding-top: 4px;
 }
 
 .label__name {
